--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,6 @@
     <dimen name="action_button_item_margin">5dp</dimen>
     <dimen name="action_button_item_padding">5dp</dimen>
     <dimen name="action_button_padding">12dp</dimen>
+    <dimen name="no_card_msg_margin">5dp</dimen>
+    <dimen name="no_card_msg_text_size">20dp</dimen>
 </resources>
